name:                taco
version:             0.4.0.0
synopsis:            Tensor Algebra COmpiler
description:         Types and a compiler for tensor expressions.
homepage:            https://github.com/ocramz/taco-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          ocramz fripost org
copyright:           2017, 2018 Marco Zocca
category:            Numeric
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Language.Taco
                       Data.Tensor.Compiler
                       Data.Tensor
                       Data.Tensor.Compiler.PHOAS
                       Data.Tensor.Compiler.PHOAS.MultiInterpreter                       
                       Data.Tensor.Compiler.Free
                       Data.Tensor.Compiler.MultiStage
                       Data.Tensor.Compiler.Edsl2Edsl                       
                       Data.Dim.Generic
                       Data.Shape
                       Data.Tensor.Exception
  other-modules:       Data.Shape.Static
                       Data.Shape.Static.Rank           
                       Data.Shape.Dynamic
                       Data.Shape.Dynamic.Named
                       Data.Shape.Types                               
                       Data.Dim  
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , exceptions
                     , mtl
                     , transformers
                     , vector
                     -- , vector-algorithms
                     -- , containers
  default-language:    Haskell2010


test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , taco
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ocramz/taco-hs
