name:                taco
version:             0.4.0.0
synopsis:            Tensor Algebra COmpiler
description:         Types and a compiler for tensor expressions.
homepage:            https://github.com/ocramz/taco-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          ocramz fripost org
copyright:           2017, 2018 Marco Zocca
category:            Numeric
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.2.2, GHC == 8.4.3

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Language.Taco
                       Data.Tensor.Compiler
                       Data.Tensor
                       -- Data.Tensor.Compiler.PHOAS
                       -- Data.Tensor.Compiler.PHOAS.MultiInterpreter        
                       -- Data.Tensor.Compiler.Free
                       -- Data.Tensor.Compiler.MultiStage
                       -- Data.Tensor.Compiler.Edsl2Edsl
                       -- Data.Tensor.Compiler.LC    
                       Data.Dim
                       Data.Shape
                       Data.Shape.Types
                       Data.Variance                    
                       Data.Tensor.Exception
                       Data.Tensor.Internal
                       Data.Shape.Static
                       Data.Shape.Static.Rank           
                       Data.Tensor.Internal.MGraph
                       Data.Tensor.Internal.Vector
                       Data.Dim.Types
  other-modules:
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , exceptions
                     , mtl
                     , parallel
                     , primitive
                     , transformers
                     , vector
                     , vector-algorithms
                     -- , vector-algorithms
                     -- , containers
                     -- -- DEBUG 
                     , hspec
                     , QuickCheck                     
  default-language:    Haskell2010


test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , QuickCheck
                     , vector
                     , taco
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

  
-- test-suite test-multicore-2
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , taco
--   ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N2
--   default-language:    Haskell2010  

source-repository head
  type:     git
  location: https://github.com/ocramz/taco-hs
