name:                taco
version:             0.4.0.0
synopsis:            Tensor Algebra COmpiler
description:         Types and a compiler for tensor expressions.
homepage:            https://github.com/ocramz/taco-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          ocramz fripost org
copyright:           2017, 2018 Marco Zocca
category:            Numeric
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.3, GHC == 8.6.5

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Language.Taco
                       Data.Tensor.Compiler
                       Data.Tensor
                       -- Data.Tensor.Compiler.PHOAS
                       -- Data.Tensor.Compiler.PHOAS.MultiInterpreter        
                       -- Data.Tensor.Compiler.Free
                       -- Data.Tensor.Compiler.MultiStage
                       -- Data.Tensor.Compiler.Edsl2Edsl
                       -- Data.Tensor.Compiler.LC
                                                             
                       Data.Tensor.Exception
                       Data.Tensor.Internal
                       Data.Tensor.Internal.Dim
                       Data.Tensor.Internal.Shape
                       Data.Tensor.Internal.Shape.Types
                       Data.Tensor.Internal.Variance
                       
                       Data.Tensor.Internal.Vector

  other-modules:       Data.Tensor.Internal.Shape.Static
                       Data.Tensor.Internal.Shape.Static.Rank
                       Data.Tensor.Internal.MGraph
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.7.1
                     , exceptions >= 0.8.3
                     , mtl >= 2.2.1
                     , parallel >= 3.2.1.1
                     , primitive >= 0.6.2.0
                     , transformers >= 0.5.2.0
                     , vector >= 0.12.0.1
                     , vector-algorithms >= 0.7.0.1
                     -- , vector-algorithms
                     -- , containers
                     -- -- DEBUG 
                     , hspec
                     , QuickCheck                     
  default-language:    Haskell2010


test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , QuickCheck
                     , vector
                     , taco
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

  
-- test-suite test-multicore-2
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , taco
--   ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N2
--   default-language:    Haskell2010  

source-repository head
  type:     git
  location: https://github.com/ocramz/taco-hs
