name:                taco-accelerate
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ocramz/taco-hs
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          ocramz fripost org
copyright:           2018 Marco Zocca
category:            Numeric
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.2.2

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Language.Taco.Backend.Accelerate
  build-depends:       base >= 4.7 && < 5
                     , taco >= 0.3.0.0
                     , accelerate >= 1.2
                     , accelerate-io


test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , taco-accelerate
                     , hspec
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/ocramz/taco-hs
